[gd_scene load_steps=6 format=3 uid="uid://djd5hvlykjgse"]

[ext_resource type="Script" path="res://components/level/Scripts/Level.gd" id="1_w5ykt"]
[ext_resource type="PackedScene" uid="uid://dqyxgq2yrley3" path="res://components/answer_button/AnswerButton.tscn" id="2_hsfq3"]
[ext_resource type="Script" path="res://components/level/Scripts/ExtrasContainer.gd" id="3_5ic7r"]
[ext_resource type="PackedScene" uid="uid://b1konyslocvmf" path="res://components/clock/Clock.tscn" id="3_fc0la"]
[ext_resource type="Script" path="res://components/level/ScoreLabel.gd" id="5_gsvxo"]

[node name="Level" type="Node2D"]
visible = false
script = ExtResource("1_w5ykt")
metadata/_edit_use_anchors_ = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
metadata/_edit_use_anchors_ = true

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.34082
anchor_top = 0.300347
anchor_right = 0.662109
anchor_bottom = 0.713542
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 2
metadata/_edit_use_anchors_ = true

[node name="AnswerButton1" parent="CanvasLayer/Control/GridContainer" instance=ExtResource("2_hsfq3")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_neighbor_left = NodePath("../../AcceptButton")
focus_neighbor_top = NodePath("../AnswerButton4")
focus_neighbor_right = NodePath("../AnswerButton2")
focus_neighbor_bottom = NodePath("../AnswerButton3")
focus_next = NodePath("../AnswerButton2")
focus_previous = NodePath("../../AcceptButton")
text = ""

[node name="AnswerButton2" parent="CanvasLayer/Control/GridContainer" instance=ExtResource("2_hsfq3")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_neighbor_left = NodePath("../AnswerButton1")
focus_neighbor_top = NodePath("../AnswerButton4")
focus_neighbor_right = NodePath("../../ExtrasContainer/Drinks")
focus_neighbor_bottom = NodePath("../AnswerButton4")
focus_next = NodePath("../AnswerButton3")
focus_previous = NodePath("../AnswerButton1")
text = ""

[node name="AnswerButton3" parent="CanvasLayer/Control/GridContainer" instance=ExtResource("2_hsfq3")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_neighbor_left = NodePath("../../ExtrasContainer/Breads")
focus_neighbor_top = NodePath("../AnswerButton1")
focus_neighbor_right = NodePath("../AnswerButton4")
focus_neighbor_bottom = NodePath("../AnswerButton1")
focus_next = NodePath("../AnswerButton4")
focus_previous = NodePath("../AnswerButton2")
text = ""

[node name="AnswerButton4" parent="CanvasLayer/Control/GridContainer" instance=ExtResource("2_hsfq3")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_neighbor_left = NodePath("../AnswerButton3")
focus_neighbor_top = NodePath("../AnswerButton2")
focus_neighbor_right = NodePath("../../ExtrasContainer/Breads")
focus_neighbor_bottom = NodePath("../AnswerButton2")
focus_next = NodePath("../../ExtrasContainer/Drinks")
focus_previous = NodePath("../AnswerButton3")
text = ""

[node name="ExtrasContainer" type="VBoxContainer" parent="CanvasLayer/Control"]
custom_minimum_size = Vector2(275, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.699219
anchor_top = 0.37934
anchor_right = 0.967773
anchor_bottom = 0.592882
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/separation = 17
script = ExtResource("3_5ic7r")
metadata/_edit_use_anchors_ = true

[node name="DrinksLabel" type="Label" parent="CanvasLayer/Control/ExtrasContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Bebidas"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Drinks" type="HSlider" parent="CanvasLayer/Control/ExtrasContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_left = NodePath("../../GridContainer/AnswerButton2")
focus_neighbor_top = NodePath("../../AcceptButton")
focus_neighbor_right = NodePath("../../GridContainer/AnswerButton1")
focus_neighbor_bottom = NodePath("../Breads")
focus_next = NodePath("../Breads")
focus_previous = NodePath("../../GridContainer/AnswerButton4")
max_value = 5.0
tick_count = 6
ticks_on_borders = true

[node name="BreadsLabel" type="Label" parent="CanvasLayer/Control/ExtrasContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Panes"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Breads" type="HSlider" parent="CanvasLayer/Control/ExtrasContainer"]
layout_mode = 2
size_flags_vertical = 1
focus_neighbor_left = NodePath("../../GridContainer/AnswerButton4")
focus_neighbor_top = NodePath("../Drinks")
focus_neighbor_right = NodePath("../../GridContainer/AnswerButton3")
focus_neighbor_bottom = NodePath("../../AcceptButton")
focus_next = NodePath("../../AcceptButton")
focus_previous = NodePath("../Drinks")
max_value = 10.0
tick_count = 11
ticks_on_borders = true

[node name="AcceptButton" type="Button" parent="CanvasLayer/Control"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
offset_left = 730.0
offset_top = 498.0
offset_right = 1005.0
offset_bottom = 548.0
size_flags_vertical = 3
focus_neighbor_left = NodePath("../GridContainer/AnswerButton4")
focus_neighbor_top = NodePath("../ExtrasContainer/Breads")
focus_neighbor_right = NodePath("../GridContainer/AnswerButton1")
focus_neighbor_bottom = NodePath("../ExtrasContainer/Drinks")
focus_next = NodePath("../GridContainer/AnswerButton1")
focus_previous = NodePath("../ExtrasContainer/Breads")
text = "Aceptar"

[node name="Clock" parent="CanvasLayer" instance=ExtResource("3_fc0la")]

[node name="ScorePanel" type="Panel" parent="CanvasLayer"]
custom_minimum_size = Vector2(200, 50)
offset_right = 40.0
offset_bottom = 40.0
size_flags_horizontal = 3

[node name="ScoreLabel" type="Label" parent="CanvasLayer/ScorePanel"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("5_gsvxo")

[connection signal="pressed" from="CanvasLayer/Control/AcceptButton" to="." method="_on_accept_button_pressed"]
